# qfc-core

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.cuda  Dockerfile.miner  Dockerfile.miner-cuda  IMPLEMENTATION_PLAN.md  MINING.md  README.md
.github/workflows/: ci.yml  docker.yml
crates/qfc-ai-coordinator/: Cargo.toml
crates/qfc-ai-coordinator/src/: assignment.rs  challenge.rs  governance.rs  ipfs.rs  lib.rs  proof_pool.rs  redundant.rs  registry.rs  router.rs  task_pool.rs  task_types.rs  verification.rs
crates/qfc-chain/: Cargo.toml
crates/qfc-chain/src/: chain.rs  error.rs  genesis.rs  lib.rs
crates/qfc-consensus/: Cargo.toml
crates/qfc-consensus/src/: engine.rs  error.rs  lib.rs  scoring.rs
crates/qfc-crypto/: Cargo.toml
crates/qfc-crypto/benches/: crypto_bench.rs
crates/qfc-crypto/examples/: keygen.rs
crates/qfc-crypto/src/: address.rs  error.rs  hash.rs  lib.rs  signature.rs  vrf.rs
crates/qfc-executor/: Cargo.toml
crates/qfc-executor/benches/: executor_bench.rs
crates/qfc-executor/src/: error.rs  evm.rs  executor.rs  lib.rs
crates/qfc-inference/: Cargo.toml
crates/qfc-inference/src/: download.rs  gpu_monitor.rs  lib.rs  model.rs  proof.rs  runtime.rs  scheduler.rs  task.rs
crates/qfc-inference/src/backend/: cpu.rs  cuda.rs  metal.rs  mod.rs
crates/qfc-inference/src/models/: bert.rs  mod.rs
crates/qfc-lsp/: Cargo.toml
crates/qfc-lsp/src/: backend.rs  diagnostics.rs  document.rs  lib.rs  main.rs
crates/qfc-mempool/: Cargo.toml
crates/qfc-mempool/src/: error.rs  lib.rs  pool.rs
crates/qfc-miner/: Cargo.toml
crates/qfc-miner/src/: config.rs  gpu.rs  main.rs  submit.rs  worker.rs
crates/qfc-network/: Cargo.toml
crates/qfc-network/src/: behaviour.rs  config.rs  error.rs  lib.rs  service.rs  sync_protocol.rs
crates/qfc-node/: Cargo.toml
crates/qfc-node/src/: main.rs  metrics.rs  miner.rs  producer.rs  sync.rs
crates/qfc-node/tests/: integration_test.rs
crates/qfc-pow/: Cargo.toml
crates/qfc-pow/src/: difficulty.rs  error.rs  lib.rs  mining.rs
crates/qfc-qsc/: Cargo.toml
crates/qfc-qsc/src/: lib.rs
crates/qfc-qsc/src/ast/: mod.rs
crates/qfc-qsc/src/codegen/: mod.rs
crates/qfc-qsc/src/fmt/: config.rs  mod.rs  printer.rs
crates/qfc-qsc/src/lexer/: mod.rs  token.rs
crates/qfc-qsc/src/parser/: mod.rs
crates/qfc-qsc/src/typeck/: mod.rs
crates/qfc-qvm/: Cargo.toml
crates/qfc-qvm/src/: executor.rs  gas.rs  lib.rs  memory.rs  value.rs
crates/qfc-qvm/src/interop/: bridge.rs  calls.rs  mod.rs  state.rs
crates/qfc-qvm/src/jit/: codegen.rs  compiler.rs  mod.rs  runtime.rs
crates/qfc-qvm/src/stdlib/: abi.rs  collections.rs  crypto.rs  math.rs  mod.rs
crates/qfc-qvm/tests/: e2e_test.rs
crates/qfc-rpc/: Cargo.toml
crates/qfc-rpc/src/: error.rs  eth.rs  lib.rs  qfc.rs  server.rs  types.rs
crates/qfc-state/: Cargo.toml
crates/qfc-state/src/: error.rs  lib.rs  pruning.rs  snap.rs  state_db.rs
crates/qfc-storage/: Cargo.toml
crates/qfc-storage/src/: batch.rs  db.rs  error.rs  lib.rs  schema.rs
crates/qfc-trie/: Cargo.toml
crates/qfc-trie/src/: error.rs  lib.rs  nibbles.rs  node.rs  proof.rs  trie.rs
crates/qfc-types/: Cargo.toml
crates/qfc-types/src/: account.rs  block.rs  constants.rs  error.rs  eth_transaction.rs  lib.rs  pow.rs  primitives.rs  receipt.rs  transaction.rs  validator.rs
scripts/: run-3-validators.sh  start-local-testnet.sh  testnet-status.sh
