[package]
name = "qfc-chain"
description = "Chain management for QFC blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qfc-types.workspace = true
qfc-crypto.workspace = true
qfc-storage.workspace = true
qfc-state.workspace = true
qfc-executor.workspace = true
qfc-consensus.workspace = true
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3.9"
