[package]
name = "qfc-crypto"
description = "Cryptographic primitives for QFC blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qfc-types.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
rand_core.workspace = true
thiserror.workspace = true
serde.workspace = true
borsh.workspace = true
hex.workspace = true

[dev-dependencies]
