[package]
name = "qfc-lsp"
version = "0.1.0"
edition = "2021"
description = "QuantumScript Language Server Protocol implementation"
license = "MIT"

[[bin]]
name = "qsc-lsp"
path = "src/main.rs"

[dependencies]
# LSP protocol
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }

# QFC compiler frontend
qfc-qsc = { path = "../qfc-qsc" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dashmap = "5.5"
ropey = "1.6"
