[package]
name = "qfc-mempool"
description = "Transaction pool for QFC blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qfc-types.workspace = true
qfc-crypto.workspace = true
qfc-state.workspace = true
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
