[package]
name = "qfc-miner"
description = "Standalone AI inference miner for QFC network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "qfc-miner"
path = "src/main.rs"

[dependencies]
qfc-types.workspace = true
qfc-crypto.workspace = true
qfc-inference.workspace = true
qfc-ai-coordinator.workspace = true
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
async-trait.workspace = true
clap.workspace = true
blake3.workspace = true
hex.workspace = true
anyhow.workspace = true

[features]
default = ["cpu"]
cpu = ["qfc-inference/cpu"]
cuda = ["qfc-inference/cuda"]
metal = ["qfc-inference/metal"]
