[package]
name = "qfc-qsc"
description = "QuantumScript compiler for QFC blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
hex.workspace = true

# Crypto
blake3.workspace = true

# String interning
string-interner = "0.17"

# Pretty printing
ariadne = "0.4"

# Internal crates
qfc-types.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
