[package]
name = "qfc-qvm"
description = "QFC Virtual Machine - QuantumScript bytecode execution engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
borsh.workspace = true

# Numeric types
primitive-types.workspace = true

# Crypto
blake3.workspace = true
ed25519-dalek.workspace = true
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }

# Utilities
hex.workspace = true
bytes.workspace = true
parking_lot.workspace = true

# JIT compilation (optional feature)
cranelift-codegen = { version = "0.104", optional = true }
cranelift-frontend = { version = "0.104", optional = true }
cranelift-module = { version = "0.104", optional = true }
cranelift-jit = { version = "0.104", optional = true }
cranelift-native = { version = "0.104", optional = true }

# Internal crates
qfc-types.workspace = true
qfc-qsc.workspace = true

[features]
default = []
jit = ["cranelift-codegen", "cranelift-frontend", "cranelift-module", "cranelift-jit", "cranelift-native"]

[dev-dependencies]
pretty_assertions = "1.4"
