[package]
name = "qfc-rpc"
description = "JSON-RPC API for QFC blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qfc-types.workspace = true
qfc-crypto.workspace = true
qfc-chain.workspace = true
qfc-consensus.workspace = true
qfc-mempool.workspace = true
qfc-network.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
hex.workspace = true

qfc-inference.workspace = true
qfc-ai-coordinator.workspace = true
borsh.workspace = true
base64.workspace = true

[dev-dependencies]
