[package]
name = "qfc-storage"
description = "Storage layer for QFC blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qfc-types.workspace = true
rocksdb.workspace = true
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
bytes.workspace = true
tracing.workspace = true
tempfile.workspace = true

[dev-dependencies]
