[package]
name = "qfc-trie"
description = "Merkle Patricia Trie for QFC blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
qfc-types.workspace = true
qfc-crypto.workspace = true
qfc-storage.workspace = true
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
lru.workspace = true
bytes.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile = "3.9"
